--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <input type="password" class="form-control" id="login-password" data-i18n="[placeholder]header.login.password">
                     </div>
-                    <button class="form-button" id="normal-button" type="button" class="btn btn-primary" data-i18n="header.login.button"></button>
+                    <button class="form-button" id="normal-button" type="button" data-i18n="header.login.button"></button>
                 </div>
                 <div id="fast-login">
                     <!-- fl -->
@@ -91,7 +91,7 @@
                 </div>
                 <div style="padding-top:15px;padding-left:50px;display: grid;grid-template-columns: 330px auto;">
                     <div>
-                        <button class="form-button" id="register-button" type="button" data-i18n="form.button" style="border-radius:5px; border:1px solid black; background:none;outline: none; float: right;">送出</button>
+                        <button class="form-button" id="register-button" type="button" data-i18n="form.button" style="border-radius:5px; border:1px solid black; outline: none; float: right;">送出</button>
                     </div>
                     <div></div>
                 </div>
