--- a/draft/static/user/style.css
+++ b/draft/static/user/style.css
@@ -125,7 +125,8 @@ body{
     margin-right: 5px; */
     margin-bottom: 20px;
     height: 200px;
-    background-color: rgb(252, 221, 221);
+    /* background-color: rgb(252, 221, 221); */
+    border: 1px solid lightgray;
     color: black;
     border-radius: 5px;
 }
@@ -136,7 +137,7 @@ body{
     width: 100%;
     overflow-y:scroll;
     overflow-x: hidden;
-    background:rgba(3, 127, 236, 0.345);
+    background: rgba(0, 172, 188, 0.68);
     height: 250px;
     border-radius: 5px;
     border:1px solid lightgrey;
@@ -196,7 +197,7 @@ body{
     box-sizing: border-box;
     padding: 10px;
     width: 100%;
-    background-color: #00adbc;
+    background-color: rgb(0, 173, 188);
     height: auto;
     font-size: 12px;
     grid-row-start: 3;
@@ -209,4 +210,12 @@ body{
 }
 #copyright{
     float: right;
+}
+
+a{
+    color: white;
+}
+
+button.dropdown-btn{
+    color: white;
 }
