--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="{{url_for('static',filename='style.js')}}"> -->
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}">
+    <link rel="stylesheet" href="../../static/user/style.css">
+    <!-- <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -20,7 +20,7 @@
     <div id="right-side">
       <a class="normal "href="">首頁</a>
       <a class="normal" href="">我的迪摩</a>
-      <a class="normal"href="">登出</a>
+      <a class="normal"href="" id="log-out">登出</a>
       <div id="setting-dropdown-div">
         <button class="dropdown-btn" id="setting">設定
             <i class="fa fa-caret-down"></i>
@@ -37,7 +37,7 @@
     <div class="letter">
       <div class="left-side">
         <div id="photo">
-          photo
+          <!-- photo -->
         </div>
         <div id="info">
           <p>Yu-Chun,Lin</p>
@@ -45,26 +45,26 @@
         </div>
         <div id="options">
           <div class="option">
-            <button class="dropdown-btn">遊戲版圖
+            <button class="dropdown-btn" class="button-option">幫幫迪摩
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-container">
-              <a href="" class="dropdown-option">a</a>
-              <a href="" class="dropdown-option">b</a>
-              <a href="" class="dropdown-option">c</a>
+              <a href="https://debugamo.appspot.com/debugging" class="dropdown-option">個人賽</a>
+              <a href="" class="dropdown-option">多人賽</a>
+              <a href="" class="dropdown-option">對戰紀錄</a>
             </div>
           </div>
           <div class="option">
-              <button class="dropdown-btn">button 2
+              <button class="dropdown-btn" class="button-option">社群
                   <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-container">
-                  <a href="" class="dropdown-option">a</a>
-                  <a href="" class="dropdown-option">b</a>
-                  <a href="" class="dropdown-option">c</a>
+                  <a href="" class="dropdown-option">好友動態</a>
+                  <a href="" class="dropdown-option">個人資料設定</a>
+                  <!-- <a href="" class="dropdown-option">c</a> -->
               </div>
           </div>
-          <div class="option">
+          <!-- <div class="option">
               <button class="dropdown-btn">button 3
                   <i class="fa fa-caret-down"></i>
               </button>
@@ -73,7 +73,7 @@
                   <a href="" class="dropdown-option">b</a>
                   <a href="" class="dropdown-option">c</a>
               </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -94,21 +94,22 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="{{url_for('static',filename='./user/user.js')}}"></script>
+<!-- <script src="{{url_for('static',filename='./user/user.js')}}"></script> -->
+<script src="../../static/user/user.js"></script>
 <script>
-var dropdown = document.getElementsByClassName("dropdown-btn");
-var i;
+// var dropdown = document.getElementsByClassName("dropdown-btn");
+// var i;
 
-for (i = 0; i < dropdown.length; i++) {
-  dropdown[i].addEventListener("click", function() {
-    var dropdownContent = this.nextElementSibling;
-    if (dropdownContent.style.display === "block") {
-      dropdownContent.style.display = "none";
-    } else {
-      dropdownContent.style.display = "block";
-    }
-  });
-}
+// for (i = 0; i < dropdown.length; i++) {
+//   dropdown[i].addEventListener("click", function() {
+//     var dropdownContent = this.nextElementSibling;
+//     if (dropdownContent.style.display === "block") {
+//       dropdownContent.style.display = "none";
+//     } else {
+//       dropdownContent.style.display = "block";
+//     }
+//   });
+// }
 
 </script>
 </body>
