finish i18next append in login-register-page

--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -63,7 +63,7 @@
                     <!-- <div class="notice"></div> -->
                 </div>
                 <div id="password-again"class="type2" style="padding-top:14px;">
-                    <label for="inputPassword" data-i18n="form.passwordagain.label" style="font-size:14px;padding-top: 8px;">Password Again</label>
+                    <label for="inputPassword" data-i18n="form.passwordagain.label" style="padding-top: 5px;">Comfirm</label>
                     <input type="password" class="form-control" id="inputPasswordagain" data-i18n="[placeholder]form.passwordagain.placeholder" name="password-again" style="width:241px">
                     <!-- <div class="notice"></div> -->
                 </div>
