--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -41,7 +41,8 @@
         </div>
         <div id="info">
           <p>Yu-Chun,Lin</p>
-          <p>Study in NCKU Computer Science and Information Engineering</p>
+          <p>Level : </p>
+          <!-- <p>Study in NCKU Computer Science and Information Engineering</p> -->
         </div>
         <div id="options">
           <div class="option">
@@ -50,7 +51,7 @@
             </button>
             <div class="dropdown-container">
               <a href="https://debugamo.appspot.com/debugging" class="dropdown-option">個人賽</a>
-              <a href="" class="dropdown-option">多人賽</a>
+              <a href="" class="dropdown-option">多人混戰</a>
               <a href="" class="dropdown-option">對戰紀錄</a>
             </div>
           </div>
