--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div id="Email" class="type2" style="padding-top:15px;">
                     <label for="inputEmail" data-i18n="form.Email.label">Email</label>
-                    <input type="email" class="form-control" id="inputEmail" data-i18n="[placeholder]form.Email.placeholder" name="email">
+                    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" data-i18n="[placeholder]form.Email.placeholder" name="email">
                     <!-- <div class="notice"></div> -->
                 </div>
                 <div id="password"class="type2" style="padding-top:15px;">
