--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -7,27 +7,30 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="{{url_for('static',filename='style.js')}}"> -->
     <link rel="stylesheet" href="../../static/user/style.css">
-    <!-- <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}"> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
   <div class="header">
     <div id="left-side">
-      <p id="title">Debugamo : 幫幫迪摩</p>
+      <p id="title" data-i18n="header.title">Debugamo : 幫幫迪摩</p>
     </div>
     <div id="mid"></div>
     <div id="right-side">
-      <a class="normal "href="">首頁</a>
-      <a class="normal" href="">我的迪摩</a>
-      <a class="normal"href="" id="log-out">登出</a>
+      <a class="normal "href="/" data-i18n="header.home">首頁</a>
+      <a class="normal" href="/user" data-i18n="header.mydemo">我的迪摩</a>
+      <a class="normal"href="/" id="log-out" data-i18n="header.logout">登出</a>
       <div id="setting-dropdown-div">
-        <button class="dropdown-btn" id="setting">設定
+        <button class="dropdown-btn" id="setting">
+            <span data-i18n="header.setting.setting"></span>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a href="" class="dropdown-option">遊戲設定</a>
-          <a href="" class="dropdown-option">個人資料設定</a>
+          <a href="" class="dropdown-option" data-i18n="header.setting.gameSetting">遊戲設定</a>
+          <!-- <a href="" class="dropdown-option">個人資料設定</a> -->
           <a href="" class="dropdown-option">選項2</a>
         </div>
       </div>
@@ -40,28 +43,30 @@
           <!-- photo -->
         </div>
         <div id="info">
-          <p>Yu-Chun,Lin</p>
-          <p>Level : </p>
-          <!-- <p>Study in NCKU Computer Science and Information Engineering</p> -->
+          <p>ID : <span>Yu-Chun,Lin</span></p>
+          <p>Level : <span>000000</span></p>
         </div>
         <div id="options">
           <div class="option">
-            <button class="dropdown-btn" class="button-option">幫幫迪摩
+            <button class="dropdown-btn" class="button-option">
+              <span data-i18n="options.game.helpdemo"></span>
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-container">
-              <a href="https://debugamo.appspot.com/debugging" class="dropdown-option">個人賽</a>
-              <a href="" class="dropdown-option">多人混戰</a>
-              <a href="" class="dropdown-option">對戰紀錄</a>
+              <a href="https://debugamo.appspot.com/debugging" class="dropdown-option" data-i18n="options.game.practice">練習場</a>
+              <a href="" class="dropdown-option"  data-i18n="options.game.solo">個人賽</a>
+              <a href="" class="dropdown-option"  data-i18n="options.game.multiplayer">多人混戰</a>
+              <a href="" class="dropdown-option" data-i18n="options.game.record">對戰紀錄</a>
             </div>
           </div>
           <div class="option">
-              <button class="dropdown-btn" class="button-option">社群
+              <button class="dropdown-btn" class="button-option" >
+                <span data-i18n="options.community.story"></span>
                   <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-container">
-                  <a href="" class="dropdown-option">好友動態</a>
-                  <a href="" class="dropdown-option">個人資料設定</a>
+                  <a href="" class="dropdown-option" data-i18n="options.community.friend">好友動態</a>
+                  <a href="" class="dropdown-option" data-i18n="options.community.edit">個人資料修改</a>
                   <!-- <a href="" class="dropdown-option">c</a> -->
               </div>
           </div>
@@ -79,39 +84,32 @@
       </div>
     </div>
       <div class="letter">
-        B
+        <input type="text" width="40px;">
       </div>
   </div>
   <div class="footer">
     <div id="copyright-div">
-        <p id="copyright"> 
+        
+        <p id="copyright">
+            <select name="lang" id="language-select" >
+                <option selected>Choose other language...</option>
+                <option value="en">English</option>
+                <option value="zh">繁體中文</option>
+            </select> 
           <a href="">問題回報</a>
           <a href="" style="margin-right:10px;">關於我們</a>
           ©Debugamo
         </p>
     </div>
   </div>
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<!-- <script src="{{url_for('static',filename='./user/user.js')}}"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="{{url_for('static',filename='./user/user.js')}}"></script>
 <script src="../../static/user/user.js"></script>
-<script>
-// var dropdown = document.getElementsByClassName("dropdown-btn");
-// var i;
-
-// for (i = 0; i < dropdown.length; i++) {
-//   dropdown[i].addEventListener("click", function() {
-//     var dropdownContent = this.nextElementSibling;
-//     if (dropdownContent.style.display === "block") {
-//       dropdownContent.style.display = "none";
-//     } else {
-//       dropdownContent.style.display = "block";
-//     }
-//   });
-// }
-
-</script>
 </body>
 </html>
