--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../static/user/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
-    <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}">
+    <!-- <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -66,7 +66,7 @@
               </button>
               <div class="dropdown-container">
                   <a href="" class="dropdown-option" data-i18n="options.community.friend">好友動態</a>
-                  <a href="" class="dropdown-option" data-i18n="options.community.edit">個人資料修改</a>
+                  <a href="" class="dropdown-option" data-i18n="options.community.edit">個人資料</a>
                   <!-- <a href="" class="dropdown-option">c</a> -->
               </div>
           </div>
@@ -84,7 +84,41 @@
       </div>
     </div>
       <div class="letter">
-        <input type="text" width="40px;">
+        <div id="edit">
+          <div id="edit-title">
+            <span style="font-size: 40px">Edit</span>
+            <div style="border: 1px solid lightgrey"></div>
+          </div>
+          <div id="name-ID" class="item">
+            <div id="name"> 
+              <div style="display: inline">
+                <label for="user-name">Name : </label>
+                <!-- <input type="text"> -->
+                <span id="user-name" style="margin-right:10px;">Yu-Chun</span>
+                <i class="fas fa-pen" id="edit-name" style="color:grey"></i>
+              </div>
+              <div id="name-drop-down" class="edit-dropdown" style="height:50px;">
+                <label for="edit-name">Name : </label>
+                <input type="text"> <button>submit</button>
+              </div>
+              </div>
+            <div>
+              <label for="edit-id" style="margin-left:5%;">ID : </label>
+              <input type="text">
+              <i class="fas fa-pen" id="edit-name" style="color:grey"></i>
+            </div>
+          </div>
+          <div id="edit-email" class="item">
+              <label for="edit-email">Email : </label>
+              <input type="text" style="width:50%">
+              <i class="fas fa-pen" id="edit-name" style="color:grey"></i>
+          </div>
+            <div id="edit-password" class="item">
+              <label for="old-password">Password :</label>
+              <input type="text" value="**************">
+              <i class="fas fa-pen" id="edit-name" style="color:grey"></i>
+            </div>
+        </div>
       </div>
   </div>
   <div class="footer">
@@ -109,7 +143,7 @@
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="{{url_for('static',filename='./user/user.js')}}"></script>
+<!-- <script src="{{url_for('static',filename='./user/user.js')}}"></script> -->
 <script src="../../static/user/user.js"></script>
 </body>
 </html>
