--- a/draft/templates/index/index.html
+++ b/draft/templates/index/index.html
@@ -13,7 +13,7 @@
     <title>Draft-index</title>
 </head>
 <body>
-    <div id="main-img">
+    <div id="main-img" style="background-image:url('../../static/index/vm032-5.jpg');background-repeat: no-repeat;">
 
     </div>
     <div class="footer">
