finish half of personal profile edit

--- a/draft/templates/index/index.html
+++ b/draft/templates/index/index.html
@@ -13,8 +13,8 @@
     <title>Draft-index</title>
 </head>
 <body>
-    <div id="main-img" style="background-image:url('../../static/index/vm032-5.jpg');background-repeat: no-repeat;">
-
+    <div id="main-img" style="background-image:url('../../static/index/3.jpg');background-repeat: no-repeat;">
+        
     </div>
     <div class="footer">
         <div class="mid"></div>
