finish editing data

--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -169,10 +169,10 @@
             
             <i class="fas fa-pen edit" id="class-edit"style="color:grey"></i>
           </div>
-          <div class="edit-dropdown" style="width:30%;">
+          <div id="class-dropdown" class="edit-dropdown" style="width:30%;">
             <label for="edit-class">Class : </label>
-            <input type="text" style="width:38%">
-            <button>Submit</button>
+            <input type="text" style="width:38%" id="class-input">
+            <button id="class-button">Submit</button>
           </div>
         </div>
 
