--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="{{url_for('static',filename='style.js')}}"> -->
-    <!-- <link rel="stylesheet" href="../../static/user/style.css"> -->
+    <link rel="stylesheet" href="../../static/user/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
     <link rel="stylesheet" href="{{url_for('static',filename='./user/style.css')}}">
@@ -86,32 +86,32 @@
     <div class="letter">
       <div id="edit">
         <div id="edit-title">
-          <span style="font-size: 40px">Edit</span>
+          <span style="font-size: 40px" data-i18n="edit.title.edit">Edit</span>
           <div style="border: 1px solid lightgrey"></div>
         </div>
         <div id="name-ID" class="item">
           <div id="name"> 
             <div style="display: inline">
-              <label for="user-name">Name : </label>
+              <label for="user-name" data-i18n="edit.nameid.name.name">Name : </label>
 
               <i class="fas fa-pen edit" id="name-edit" style="color:grey"></i>
             </div>
             <div id="Name-drop-down" class="edit-dropdown">
-              <label for="edit-name">Name : </label>
-              <input type="text" id="edit-name"> <button id="name-button">submit</button>
+              <label for="edit-name" data-i18n="edit.nameid.name.name">Name : </label>
+              <input type="text" id="edit-name"> <button id="name-button" data-i18n="edit.button">submit</button>
               
             </div>
           </div>
           <div id="ID">
             <div>
-              <label for="edit-id">gameID : </label>
+              <label for="edit-id" data-i18n="edit.nameid.id.gameid">gameID : </label>
               
               <i class="fas fa-pen edit" id="ID-edit" style="color:grey"></i>
             </div>
             <div id="ID-drop-down" class="edit-dropdown">
               <div style="width:100%" id="id-input">
-                <label for="edit-id">gameID : </label>
-                <input type="text" id="edit-gameID"> <button id="id-button">submit</button>
+                <label for="edit-id" data-i18n="edit.nameid.id.gameid">gameID : </label>
+                <input type="text" id="edit-gameID"> <button id="id-button" data-i18n="edit.button">submit</button>
               </div>
               <!-- <small style="display:inline">adslfk;askljf;alskjf</small> -->
             </div>
@@ -119,40 +119,40 @@
         </div>
         <div id="edit-email" class="item">
           <div>
-            <label for="edit-email">Email : </label>
+            <label for="edit-email" data-i18n="edit.email.email">Email : </label>
             <!-- <span id="user-email" class="user-data">example@gmail.com</span> -->
             <i class="fas fa-pen edit" id="email-edit"style="color:grey"></i>
           </div>
           <div id="Email-drop-down" class="edit-dropdown" style="width:50%;">
             <div id="email-input-div" style="width:100%;">
-              <label for="edit-email">Email : </label>
-              <input type="email" style="width:60%;" id="edit-email-input"> <button id="email-button">Submit</button>
+              <label for="edit-email" data-i18n="edit.email.email">Email : </label>
+              <input type="email" style="width:60%;" id="edit-email-input"> <button id="email-button" data-i18n="edit.button">Submit</button>
             </div>
           </div>
         </div>
         <div id="edit-password" class="item">
           <div>
-            <label for="password">Password :</label>
+            <label for="password" data-i18n="edit.password.password">Password :</label>
             <span id="password">********</span>
             <i class="fas fa-pen edit" style="color:grey"></i>
           </div>
-          <div id="password-dropdown" class="edit-dropdown" style="display:none;">
-            <div style="width:100%;">
-              <label for="old-password">Old Password</label>
+          <div id="password-dropdown" class="edit-dropdown" style="display:none;width:90%;">
+            <div >
+              <label for="old-password" data-i18n="edit.password.old-password">Old Password</label>
               <input type="password" style="display:inline;" id="old-password">
             </div>
             <div id="password-confirm">
-              <label for="new-password">New Password</label>
+              <label for="new-password" data-i18n="edit.password.new-password">New Password</label>
               <input type="password" style="margin-top:5px;" id='newpassword'>
-              <label for="comfirm">Confirm</label>
+              <label for="comfirm" data-i18n="edit.password.confirm">Confirm</label>
               <input type="password" id='confirm'>
-              <button id="password-button">submit</button>
+              <button id="password-button" data-i18n="edit.button">submit</button>
             </div>
           </div>
         </div>
         <div id="edit-birthday" class="item">
           <div>
-            <label for="user-birthday">Birthday : </label>
+            <label for="user-birthday" data-i18n="edit.birthday">Birthday : </label>
             <i class="fas fa-pen edit" id="birthday-edit"style="color:grey"></i>
           </div>
           <div id="Birthday-drop-down" class="edit-dropdown" style="width:50%;">
@@ -160,24 +160,22 @@
             <select name="year" id="year" class="form-cotrol"></select>
             <select name="month" id="month"></select>
             <select name="date" id="date"></select>
-            <button style="margin-left:20px;" id="birthday-button">Submit</button>
+            <button style="margin-left:20px;" id="birthday-button" data-i18n="edit.button">Submit</button>
           </div>
         </div>
         <div id="edit-class" class="item">
           <div>
-            <label for="edit-class">Class : </label>
+            <label for="edit-class" data-i18n="edit.class">Class : </label>
             
             <i class="fas fa-pen edit" id="class-edit"style="color:grey"></i>
           </div>
           <div id="class-dropdown" class="edit-dropdown" style="width:30%;">
-            <label for="edit-class">Class : </label>
+            <label for="edit-class" data-i18n="edit.class">Class : </label>
             <input type="text" style="width:38%" id="class-input">
-            <button id="class-button">Submit</button>
+            <button id="class-button" data-i18n="edit.button">Submit</button>
           </div>
         </div>
-
       </div>
-    
     </div>
   </div>
   <div class="footer">
@@ -189,8 +187,8 @@
                 <option value="en">English</option>
                 <option value="zh">繁體中文</option>
             </select> 
-          <a href="">問題回報</a>
-          <a href="" style="margin-right:10px;">關於我們</a>
+          <a href="" data-i18n="footer.report">Report</a>
+          <a href="" style="margin-right:10px;" data-i18n="footer.us">About Us</a>
           ©Debugamo
         </p>
     </div>
@@ -202,7 +200,7 @@
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
-<script src="{{url_for('static',filename='./user/user.js')}}"></script>
-<!-- <script src="../../static/user/user.js"></script> -->
+<!-- <script src="{{url_for('static',filename='./user/user.js')}}"></script> -->
+<script src="../../static/user/user.js"></script>
 </body>
 </html>
