--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -35,9 +35,10 @@
                 </div>
             </form>
     </div>
+    <div></div>
     <div id="container">
-        <div id="image">
-            a
+        <div id="image" style="background-image:url('../../static/login/cat5.jpg');background-repeat: no-repeat">
+            
         </div>
         <div style="background-image:url('../../static/login/register/2.png');background-repeat: no-repeat;">
             <div id="register" >
