--- a/draft/templates/user/users.html
+++ b/draft/templates/user/users.html
@@ -66,7 +66,8 @@
               </button>
               <div class="dropdown-container">
                   <a href="" class="dropdown-option" data-i18n="options.community.friend">好友動態</a>
-                  <a href="javascript:void(0)"id="information" class="dropdown-option" data-i18n="options.community.edit">個人資料</a>
+                  <a href="" class="dropdown-option" data-i18n="options.community.edit">個人資料</a>
+                  <!-- <a href="" class="dropdown-option">c</a> -->
               </div>
           </div>
           <!-- <div class="option">
@@ -82,8 +83,101 @@
         </div>
       </div>
     </div>
-    <div class="letter" id="main-container"></div><!-- letter-->
-  </div> <!-- wrapper-->
+    <div class="letter">
+      <div id="edit">
+        <div id="edit-title">
+          <span style="font-size: 40px" data-i18n="edit.title.edit">Edit</span>
+          <div style="border: 1px solid lightgrey"></div>
+        </div>
+        <div id="name-ID" class="item">
+          <div id="name"> 
+            <div style="display: inline">
+              <label for="user-name" data-i18n="edit.nameid.name.name">Name : </label>
+
+              <i class="fas fa-pen edit" id="name-edit" style="color:grey"></i>
+            </div>
+            <div id="Name-drop-down" class="edit-dropdown">
+              <label for="edit-name" data-i18n="edit.nameid.name.name">Name : </label>
+              <input type="text" id="edit-name"> <button id="name-button" data-i18n="edit.button">submit</button>
+              
+            </div>
+          </div>
+          <div id="ID">
+            <div>
+              <label for="edit-id" data-i18n="edit.nameid.id.gameid">gameID : </label>
+              
+              <i class="fas fa-pen edit" id="ID-edit" style="color:grey"></i>
+            </div>
+            <div id="ID-drop-down" class="edit-dropdown">
+              <div style="width:100%" id="id-input">
+                <label for="edit-id" data-i18n="edit.nameid.id.gameid">gameID : </label>
+                <input type="text" id="edit-gameID"> <button id="id-button" data-i18n="edit.button">submit</button>
+              </div>
+              <!-- <small style="display:inline">adslfk;askljf;alskjf</small> -->
+            </div>
+          </div>
+        </div>
+        <div id="edit-email" class="item">
+          <div>
+            <label for="edit-email" data-i18n="edit.email.email">Email : </label>
+            <!-- <span id="user-email" class="user-data">example@gmail.com</span> -->
+            <i class="fas fa-pen edit" id="email-edit"style="color:grey"></i>
+          </div>
+          <div id="Email-drop-down" class="edit-dropdown" style="width:50%;">
+            <div id="email-input-div" style="width:100%;">
+              <label for="edit-email" data-i18n="edit.email.email">Email : </label>
+              <input type="email" style="width:60%;" id="edit-email-input"> <button id="email-button" data-i18n="edit.button">Submit</button>
+            </div>
+          </div>
+        </div>
+        <div id="edit-password" class="item">
+          <div>
+            <label for="password" data-i18n="edit.password.password">Password :</label>
+            <span id="password">********</span>
+            <i class="fas fa-pen edit" style="color:grey"></i>
+          </div>
+          <div id="password-dropdown" class="edit-dropdown" style="display:none;width:90%;">
+            <div >
+              <label for="old-password" data-i18n="edit.password.old-password">Old Password</label>
+              <input type="password" style="display:inline;" id="old-password">
+            </div>
+            <div id="password-confirm">
+              <label for="new-password" data-i18n="edit.password.new-password">New Password</label>
+              <input type="password" style="margin-top:5px;" id='newpassword'>
+              <label for="comfirm" data-i18n="edit.password.confirm">Confirm</label>
+              <input type="password" id='confirm'>
+              <button id="password-button" data-i18n="edit.button">submit</button>
+            </div>
+          </div>
+        </div>
+        <div id="edit-birthday" class="item">
+          <div>
+            <label for="user-birthday" data-i18n="edit.birthday">Birthday : </label>
+            <i class="fas fa-pen edit" id="birthday-edit"style="color:grey"></i>
+          </div>
+          <div id="Birthday-drop-down" class="edit-dropdown" style="width:50%;">
+            <label for="edit-birthday">Birthday : </label>
+            <select name="year" id="year" class="form-cotrol"></select>
+            <select name="month" id="month"></select>
+            <select name="date" id="date"></select>
+            <button style="margin-left:20px;" id="birthday-button" data-i18n="edit.button">Submit</button>
+          </div>
+        </div>
+        <div id="edit-class" class="item">
+          <div>
+            <label for="edit-class" data-i18n="edit.class">Class : </label>
+            
+            <i class="fas fa-pen edit" id="class-edit"style="color:grey"></i>
+          </div>
+          <div id="class-dropdown" class="edit-dropdown" style="width:30%;">
+            <label for="edit-class" data-i18n="edit.class">Class : </label>
+            <input type="text" style="width:38%" id="class-input">
+            <button id="class-button" data-i18n="edit.button">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div id="copyright-div">
         
