--- a/Project/appengine/debugging/public/style.css
+++ b/Project/appengine/debugging/public/style.css
@@ -262,63 +262,54 @@ html[dir="RTL"] button.primary {
     font-weight: 900;
 }
 
-.header .rightSide {
-    /* display: grid; */
+.header .rightSide#rightBar {
+    /* display: inline-block; */
     float: right;
-    height: 100%;
-    /* grid-template-columns: 2fr 2fr 2fr; */
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding:3px;
+    height: 50px;
+    width:300px;
+    cursor: pointer;
     /*display: none;*/
 }
 
-button:active{
-    border: 1px solid #888;
-    outline: none;
-}
-
-.header .rightSide a,.header .rightSide button{
-    outline: none;
-    text-decoration: none;
-    text-align: center;
-    margin-left:7px;
-    margin-right: 7px;
-    transition: all .3s ease;
-    vertical-align: middle;
+.header .rightSide button {
+    /* margin: 7px 0 0 10px; */
     border: 0px;
-    box-shadow: none;
-}
-
-.header .rightSide a{
-    transition: all .3s ease;
-    color: white;
-}
-
-.header .rightSide button{
     background-color: #00adbc;
+    outline: none;
     color: white;
-}
-
-.header .rightSide button:active{
-    border: none;
-}
-
-i{
-    float: right;
-}
-
-.header .rightSide a:hover{
-    color: lightgrey;
 }
 
 .header .rightSide button:hover{
-    color: lightgrey;
+    box-shadow: none;
 }
 
-/* 
-.header .rightSide button {
-    margin: 7px 0 0 10px;
-} */
+
+.header .rightSide#rightBar div{
+    display: inline-block;
+}
+
+.header .rightSide#rightBar .goog-container.goog-container-vertical{
+    outline: none;
+    height: auto;
+    width: auto;
+    color: white;
+}
+
+.header .rightSide#rightBar .goog-menubar{
+    background: #00adbc;
+    color: white;
+}
+
+.header .rightSide#rightBar .goog-menubar .goog-menu-button{
+    background: #00adbc;
+    color: white;
+    border:0px;
+}
+
+.goog-menuitem{
+    cursor: pointer;
+}
 
 pre#containerCode {
     max-height: 310px;
@@ -705,11 +696,9 @@ pre#containerCode {
     width: 8px;
     height: 8px;
 }
-
 #guide-inner-box::-webkit-scrollbar-corner {
     background-color: rgb(220,220,220);
 }
-
 #guide-inner-box::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: #bbb;
@@ -862,14 +851,14 @@ pre#containerCode {
 }
 
 button {
-    
-    /* -webkit-user-select: none; */
+    padding: 7px;
+    -webkit-user-select: none;
     /* Chrome all / Safari all */
-    /* -moz-user-select: none; */
+    -moz-user-select: none;
     /* Firefox all */
-    /* -ms-user-select: none; */
+    -ms-user-select: none;
     /* IE 10+ */
-    /* user-select: none; */
+    user-select: none;
 }
 
 .hint-img {
