finish designing the Encryption object to maintain encryption and decryption in the backend

--- a/Project/appengine/templates/user/users.html
+++ b/Project/appengine/templates/user/users.html
@@ -169,7 +169,7 @@
             <button style="margin-left:20px;" id="birthday-button" data-i18n="edit.button">Submit</button>
           </div>
         </div>
-        <div id="edit-class" class="item">
+        <div id="edit-class" class="item" style="display:none">
           <div>
             <label for="edit-class" data-i18n="edit.class">Class : </label>
 
