--- a/Project/appengine/static/backend/style.css
+++ b/Project/appengine/static/backend/style.css
@@ -99,6 +99,8 @@ a{
     display:inline-block;
     margin-left: 5px;
     margin-right: 5px;
+    width: 100px;
+    text-align: center;
 }
 
 .classItem a{
@@ -127,3 +129,8 @@ a{
     display: block;
 }
 
+#task .dropdownBar{
+    height: 15%;
+    text-align: center;
+    cursor: pointer;
+}
